[package]
authors = [
    "nemurubaka <cijiugechu@gmail.com>",
    "Nicolas Patry <patry.nicolas@protonmail.com>"
]
name = "cuda_bindgen"
version = "0.2.0"
edition = "2021"
description = """
Bindgen like interface to build cuda kernels to interact with within Rust.
"""
readme = "./README.md"
license = "MIT"
homepage = "https://github.com/cijiugechu/cuda_bindgen"
repository = "https://github.com/cijiugechu/cuda_bindgen"
documentation = "https://docs.rs/cuda_bindgen/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
num_cpus = "1.16.0"
rayon = "1.8.0"
cudarc = "0.17"
